# classicube-pet-plugin

./: Cargo.toml
.github/workflows/: build.yml
src/: component.rs  lib.rs
src/components/: logger.rs  mod.rs
src/components/logger/: tests.rs
src/plugin/: command.rs  custom_models.rs  logger.rs  mod.rs  module.rs  pet.rs  relay.rs  runtime.rs
src/plugin/command/: tests.rs
src/plugin/custom_models/: tests.rs
src/plugin/module/: tests.rs
src/plugin/pet/: entity.rs  pathfind.rs  skin.rs
src/plugin/pet/entity/: tests.rs
src/plugin/pet/pathfind/: tests.rs
src/plugin/pet/skin/: tests.rs
src/plugin/relay/: tests.rs
