[package]
name = "classicube-pet-plugin"
version = "0.4.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "=1.0.103"
borsh = { version = "=1.7.0", features = ["derive"] }
png = "=0.18.1"
reqwest = "=0.13.4"
zerocopy = { version = "=0.8.52", features = ["derive"] }
classicube-helpers = { git = "https://github.com/SpiralP/rust-classicube-helpers.git" }
classicube-relay = { git = "https://github.com/SpiralP/rust-classicube-relay.git" }
classicube-sys = "=6.0.4"
pathfinding = "=4.15.0"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
